--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -103,5 +103,11 @@ ul.nav {
       }
     }
   }
-
 }
+
+.side-navigation {
+  .table-header {
+    padding: size(1) 0 0 0;
+  }
+}
+
